--- a/pom.xml
+++ b/pom.xml
@@ -7,18 +7,18 @@
     <groupId>edu.umn</groupId>
     <artifactId>pubsub</artifactId>
     <version>1.0-SNAPSHOT</version>
+
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.0</version>
                 <configuration>
-                    <source>7</source>
-                    <target>7</target>
+                    <release>7</release>
                 </configuration>
             </plugin>
         </plugins>
     </build>
-
 
 </project>
